GMM_Main/src/objects/Commitment__c.object
<CustomObject>
    <description>Combined Commitment/Obligation line from Momentum</description>
    <fields>
        <fullName>COMLN_UIDY_ID__c</fullName>
        <description>The Momentum uniqe identifier of the commitment line (MF_IQ_HDAL record)</description>
        <label>COMLN_UIDY_ID</label>
        <length>75</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>COM_DOC_NUM__c</fullName>
        <description>The DOC_NUM of the commitment (MF_IQ record) in Momentum.  Corresponds to the GRNT1YR_ID of the application record</description>
        <label>COM_DOC_NUM</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>COM_LNUM__c</fullName>
        <description>The Momentum line number (LNUM) of the commitment line (MF_IQ_HDAL record).</description>
        <label>COM_LNUM</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>COM_STAE_OF_LINE__c</fullName>
        <description>The state of the commitment line (MF_IQ_HDAL record) in Momentum.  Usually open or closed.</description>
        <label>COM_STAE_OF_LINE</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>COM_TRANS_TYPE__c</fullName>
        <description>The Momentum transaction type (TT) of the commitment line (MF_IQ_HDAL record)</description>
        <label>COM_TRANS_TYPE</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Commitment_Name__c</fullName>
        <label>COMMITMENT NAME</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>END_DT__c</fullName>
        <description>The end date of the obligation or commitment</description>
        <label>END_DT</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FISCAL_YR_1_NBR__c</fullName>
        <description>The first fiscal year of the commitment or obligation</description>
        <label>FISCAL_YR_1_NBR</label>
        <length>75</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FISCAL_YR_2_NBR__c</fullName>
        <description>The ending fiscal year of the commitment or obligation</description>
        <label>FISCAL_YR_2_NBR</label>
        <length>75</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FUND_CD__c</fullName>
        <description>The fund code of the commitment or obligation</description>
        <label>FUND_CD</label>
        <length>75</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GRNT_LOCATION_NBR__c</fullName>
        <description>The location code of the obligation or commitment</description>
        <label>GRNT_LOCATION_NBR</label>
        <length>75</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LINE_AVAIL_DEOB_AMT__c</fullName>
        <description>The dollar amount of the obligation which has not been drawn down</description>
        <label>LINE_AVAIL_DEOB_AMT</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LINE_CHANGE_AMT__c</fullName>
        <description>The dollar amount of any change to the obligated or commited amount</description>
        <label>LINE_CHANGE_AMT</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LINE_COMMITED_AMT__c</fullName>
        <description>The dollar amount of the commitment</description>
        <label>LINE_COMMITED_AMT</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LINE_EXPENSE_AMT__c</fullName>
        <description>The dollar amount of the expense</description>
        <label>LINE_EXPENSE_AMT</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LINE_OBLIGATED_AMT__c</fullName>
        <description>The dollar amount of the obligation</description>
        <label>LINE_OBLIGATED_AMT</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LINE_PAID_AMT__c</fullName>
        <description>The amount of the obligation drawn down by the grantee</description>
        <label>LINE_PAID_AMT</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OBJ_CLASS_CD__c</fullName>
        <description>The object class of the obligation or commitment</description>
        <label>OBJ_CLASS_CD</label>
        <length>75</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OBLN_UIDY_ID__c</fullName>
        <description>The unique idenfier of the obligation line (MF_IO_HDAL record) in Momentum</description>
        <externalId>true</externalId>
        <label>OBLN_UIDY_ID</label>
        <length>75</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>OBL_DOC_NUM__c</fullName>
        <description>The document number of the obligation (MF_IO record) in Momentum.  Corresponds to the SUPP_MECH_CD in the application/grant.</description>
        <label>OBL_DOC_NUM</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OBL_DOC_TYPE__c</fullName>
        <description>The document type of the obligation record in Momentum.  Always GH or GM</description>
        <label>OBL_DOC_TYPE</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OBL_LNUM__c</fullName>
        <description>The line number of the obligation line in Momentum</description>
        <label>OBL_LNUM</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OBL_TRANS_TYPE__c</fullName>
        <description>The transaction type of the Momentum obligation record</description>
        <label>OBL_TRANS_TYPE</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PGM_MGR_CD__c</fullName>
        <description>The program manager code of the obligation or commitment</description>
        <label>PGM_MGR_CD</label>
        <length>75</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PURPOSE_CD__c</fullName>
        <description>The purpose code of the obligation or commitment</description>
        <label>PURPOSE_CD</label>
        <length>75</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>REFD_LINE_ID__c</fullName>
        <description>The UIDY of the commitment line pointed to by the obligation line</description>
        <label>REFD_LINE_ID</label>
        <length>75</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>START_DT__c</fullName>
        <description>The start date of the obligation or commitment</description>
        <label>START_DT</label>
        <type>Date</type>
    </fields>
    <label>Commitment</label>
    <nameField>
        <displayFormat>C-{0000}</displayFormat>
        <label>Commitment Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Commitments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>